--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/script.js"></script>
-    <link rel="icon" href="img/favicon.svg">
+    <link rel="icon" type="image/svg" sizes="32x32" href="img/favicon.svg">
+    <link rel="icon" type="image/svg" sizes="16x16" href="img/favicon.svg">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/favicon.svg">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
     </style>
