--- a/brand.html
+++ b/brand.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="js/script.js"></script>
     <link rel="stylesheet" href="css/brand.css">
-    <link rel="icon" type="image/svg" sizes="32x32" href="img/favicon.png">
-    <link rel="icon" type="image/svg" sizes="16x16" href="img/favicon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon.png">
     <link rel="apple-touch-icon" sizes="180x180" href="img/favicon.png">
     <title>Brand</title>
 </head>
