--- a/newyork.html
+++ b/newyork.html
@@ -8,8 +8,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/top.js"></script>
     <link rel="stylesheet" href="css/projects.css">
-    <link rel="icon" type="image/svg" sizes="32x32" href="img/favicon.png">
-    <link rel="icon" type="image/svg" sizes="16x16" href="img/favicon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon.png">
     <link rel="apple-touch-icon" sizes="180x180" href="img/favicon.png">
     <title>PROJECT NEW YORK</title>
 </head>
